src-tauri/check_errors.txt
cargo :     Checking novelparser v0.1.3 
(C:\Users\Initsnow\projects\NovelParser\
src-tauri)
At line:1 char:1
+ cargo check 2>&1 | Out-File -Encoding 
utf8 check_errors.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecif 
   ied: (    Checking no...rser\src-ta  
  uri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCom 
   mandError
 
error[E0308]: mismatched types
  --> src\llm.rs:35:70
   |
35 |     let client = Client::with_confi
g(openai_config).with_http_client(http_c
lient.clone());
   |                                    
                 ---------------- ^^^^^^
^^^^^^^^^^^^^ expected `reqwest::async_i
mpl::client::Client`, found `reqwest::Cl
ient`
   |                                    
                 |
   |                                    
                 arguments to this metho
d are incorrect
   |
note: there are multiple different versi
ons of crate `reqwest` in the dependency
 graph
  --> C:\Users\Initsnow\.cargo\registry\
src\mirrors.tuna.tsinghua.edu.cn-4dc0164
2fd091eda\reqwest-0.12.28\src\async_impl
\client.rs:93:1
   |
93 | pub struct Client {
   | ^^^^^^^^^^^^^^^^^ this is the expec
ted type
   |
  ::: C:\Users\Initsnow\.cargo\registry\
src\mirrors.tuna.tsinghua.edu.cn-4dc0164
2fd091eda\reqwest-0.13.2\src\async_impl\
client.rs:93:1
   |
93 | pub struct Client {
   | ----------------- this is the found
 type
   = help: you can use `cargo tree` to e
xplore your dependency tree
note: method defined here
  --> C:\Users\Initsnow\.cargo\registry\
src\mirrors.tuna.tsinghua.edu.cn-4dc0164
2fd091eda\async-openai-0.27.2\src\client
.rs:62:12
   |
62 |     pub fn with_http_client(mut sel
f, http_client: reqwest::Client) -> Self
 {
   |            ^^^^^^^^^^^^^^^^

For more information about this error, t
ry `rustc --explain E0308`.
error: could not compile `novelparser` (
lib) due to 1 previous error
